[package]
name = "rust_tmdb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["serde"] }
dialoguer = "0.11.0"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
